Fixes CSS for bg-gradient-to-tr class, fixes CSS for navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-gradient-to-tr{
+    background-image: linear-gradient(to top right, #0D9488, #Ffffff) !important;
+}
